--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang = "en">
+  <head>
+    <meta charset="utf-8">
+    <title> &copy; Kopra </title>
+    <base href = "/">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <!-- Fonts -->
+    <link rel = "preconnect" href = "https://fonts.gstatic.com">
+    <link href = "https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel = "stylesheet">
+    <link href = "https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel = "stylesheet">
+    <!-- Icons -->
+    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
